--- a/exercicios/ex26/mq004/estilos/media-query.css
+++ b/exercicios/ex26/mq004/estilos/media-query.css
@@ -1,7 +1,81 @@
 @charset "UTF-8";
 
 /* Todas as demais mídias */
+/* Typical Device Breakpoints
+pequenas telas: até 600px;
+Celular: até 600px;
+Tablet: 769px até 992px;
+Desktop: 993px até 1200px;
+Grandes telas: Acima de  1200px.
+ */
 
 @media print {
-    
+
+    * {
+        font-family: 'Courier New', Courier, monospace;
+    }
+
+    body {
+        /* background-image: url(../imagens/back-print.jpg); Não funciona!!! */
+    }
+    main {
+        width: 90vw;
+        border: 2px solid black;
+    }
+
+    main::after {
+        content: 'Essa impressão foi feeita através do site www.willianBatista.com';
+        text-decoration: overline;
+    }
+
+    main h1 {
+        text-shadow: none;
+        color: black;
+    }
+
+    img#phone { display: none; }
+    img#tablet { display: none;}
+    img#print { display: block; }
+    img#pc { display: none; }
+    img#tv { display: none; }
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) {
+    body {
+        background-image: url(../imagens/back-tablet.jpg);
+    }
+
+    img#phone { display: none; }
+    img#tablet { display: block;}
+    img#print { display: none; }
+    img#pc { display: none; }
+    img#tv { display: none; }
+}
+
+@media screen and (min-width: 993px) and (max-width:  1200px) {
+    body {
+        background-image: url(../imagens/back-pc.jpg);
+    }
+
+    img#phone { display: none; }
+    img#tablet { display: none; }
+    img#print { display: none; }
+    img#pc { display: block; }
+    img#tv { display: none; }
+}
+
+@media screen and (min-width: 1201px) {
+    body {
+        background-image: url(../imagens/back-tv.jpg);
+    }
+
+    main {
+        width: 700px;
+    }
+
+    img#phone { display: none; }
+    img#tablet { display: none; }
+    img#print { display: none; }
+    img#pc { display: none; }
+    img#tv { display: block; }
 }
